Add extra case to avoid doubling up on transition points if they were the final goal.